--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.broadleafcommerce.microservices</groupId>
         <artifactId>broadleaf-services-jpa-only-parent</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1-GA</version>
         <relativePath />
     </parent>
     <artifactId>broadleaf-bulk-operations-services-parent</artifactId>
