--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>Bulk Operations Parent</description>
 
     <properties>
-        <revision>1.0.0-SNAPSHOT</revision>
+        <revision>1.0.0-RC1</revision>
     </properties>
 
     <repositories>
